Bug 135264 - FILEOPEN DOCX Glow effects transparency should be prioritized over area transparency
Summary: FILEOPEN DOCX Glow effects transparency should be prioritized over area trans...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords:
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2020-07-29 09:56 UTC by NISZ LibreOffice Team
Modified: 2020-07-30 10:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word with glow effect + transparent shapes (151.08 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-07-29 09:56 UTC, NISZ LibreOffice Team
Details
Screenshot of the fill transparency side by side in Word and Writer (1.19 MB, image/png)
2020-07-29 09:59 UTC, NISZ LibreOffice Team
Details
Screenshot of the glow transparency side by side in Word and Writer (1.19 MB, image/png)
2020-07-29 09:59 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-07-29 09:56:45 UTC
Created attachment 163730 [details]
Example file from Word with glow effect + transparent shapes

Attached file is the Word 2010 cover page template “Exposition”. It has some BTLR textboxes with both area fill+transparency and glow effect + transparency.
When opened in Writer the shapes have the area fill transparency applied instead of the glow effects transparency.

Steps to reproduce:
    1. Open attached file

Actual results:
The three vertical rectangles are mostly transparent.

Expected results:
The three vertical rectangles should be mostly opaque.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

Also happens in older versions, since support for glow effect is pretty new.
Comment 1 NISZ LibreOffice Team 2020-07-29 09:59:19 UTC
Created attachment 163731 [details]
Screenshot of the fill transparency side by side in Word and Writer
Comment 2 NISZ LibreOffice Team 2020-07-29 09:59:39 UTC
Created attachment 163732 [details]
Screenshot of the glow transparency side by side in Word and Writer
Comment 3 Mike Kaganski 2020-07-29 10:53:09 UTC
(In reply to NISZ LibreOffice Team from comment #0)
> Also happens in older versions, since support for glow effect is pretty new.

No, what happens in older versions is simply not drawing the glow below the object.

This seems to be wrong order of application of effects: the fill with the transparency seems to be applied after the glow had been applied to the box without the fill. So glow is only drawn for then-nontransparent text, not for partially transparent area.
Comment 4 Mike Kaganski 2020-07-29 13:13:46 UTC
https://gerrit.libreoffice.org/c/core/+/99694
Comment 5 Commit Notification 2020-07-29 15:22:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f3c67b783a5dcdf874c6109d36fae8f411e885be

tdf#135264: draw to mpAlphaVDev after DrawTransparentNatively

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-07-30 10:01:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5a67b74e40367f160387a8ccebc52874b4f4ddb6

tdf#135264: draw to mpAlphaVDev after DrawTransparentNatively

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-07-30 10:58:48 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 231e1e416c039d1f9724962a89cf0573a3db48a2
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Mike Kaganski, thanks for fixing this issue!!