tdf#135264: draw to mpAlphaVDev after DrawTransparentNatively

Otherwise the transparency is lost for the cases where mpAlphaVDev
is used.

Change-Id: Ic7b92cb69727dbe8901695ba496878f0ea381826
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99694
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>